Red pen edits to 6.5.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-eval-1}
 
-The development of the Mirrorshades platform was driven both to investigate mobile parallel reality systems as a concept in general and to assess their suitability when applied to a particular case study as a new modality for interacting with VR content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to a `traditional' VR cultural heritage experience before studying reactions and preferences toward different parallel reality implementations with regards to the default view and transition styles provided.
+The development of the Mirrorshades platform was driven both to investigate mobile parallel reality systems as a concept in general and to assess their suitability when applied to a particular case study as a new modality for interacting with VR content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to a seated VR cultural heritage experience before studying reactions and preferences toward different parallel reality implementations with regards to the default view and transition styles provided.
 
 %=========================================================================================================
 
@@ -177,7 +177,7 @@ It is worth noting that although the parallel reality scenario scored lower than
 
 Studying the structured interviews that took place after participants had completed both scenarios (interviews were recorded and subsequently transcribed) provided a wealth of qualitative feedback.
 
-All participants said that the parallel reality scenario was more engaging than the seated VR scenario, even though 2x participants said that they preferred the seated VR scenario overall. Of those that said they preferred the seated VR scenario, one did not find it comfortable to walk while wearing the DK1 and the other reported gaining a better understanding of the past from the traditional VR scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches and was not changed to account for different participant heights, as this would have required lengthy recalibration for each and every participant. For a participant of average height, the discrepancy between their RW viewpoint and their VR viewpoint was minimal, however for a particularly short or particularly tall participant this discrepancy would have been much greater and may have contributed to the discomfort of walking with the DK1, as each transition between RW and VR would have resulted in a perceptible shift in height of the viewpoint. Those that said that they preferred the parallel reality scenario alluded to the immediacy of comparison between RW and VR as a contributing factor.
+All participants said that the parallel reality scenario was more engaging than the seated VR scenario, even though 2x participants said that they preferred the seated VR scenario overall. Of those that said they preferred the seated VR scenario, one did not find it comfortable to walk while wearing the DK1 and the other reported gaining a better understanding of the past from the seated VR scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches and was not changed to account for different participant heights, as this would have required lengthy recalibration for each and every participant. For a participant of average height, the discrepancy between their RW viewpoint and their VR viewpoint was minimal, however for a particularly short or particularly tall participant this discrepancy would have been much greater and may have contributed to the discomfort of walking with the DK1, as each transition between RW and VR would have resulted in a perceptible shift in height of the viewpoint. Those that said that they preferred the parallel reality scenario alluded to the immediacy of comparison between RW and VR as a contributing factor.
 
 Twice as many participants reported that the parallel reality scenario made it easier to spot differences between RW and VR as reported that the seated VR scenario made it easier, with 4 out of 6 participants reporting noticing differences between RW and VR in the parallel reality scenario that they did not notice in the seated VR scenario. In particular the different position of the rood screen was mentioned by several participants, one participant who didn't notice the different position during the seated VR scenario commenting that the parallel reality scenario made it \textit{``blatantly obvious''}, while another participant was able to list multiple differences that s/he had spotted in the parallel reality scenario that they had not noticed in the seated VR scenario. One participant directly mentioned then confirmed that immediacy of comparison between RW and VR was the enabler of spotting more differences, another mentioned that with the seated VR scenario it was not clear that you were \textit{``trying to look into the past''} but in the parallel reality scenario it was obvious because \textit{``you can see the differences''}, while another directly said that s/he preferred the parallel reality scenario because \textit{``it was easier to compare and contrast between the real world and the virtual one''}.
 
@@ -195,7 +195,7 @@ For the seated VR scenario log data were recorded while each participant was eng
 
 %It was expected that the cumbersome nature of the parallel reality scenario in terms of the hardware that needed to be carried by the participant and the reduced quality of viewing the RW environment via the cameras would have a noticeable restrictive effect upon participants' movement (both in terms of their position and the orientation of their head) in the parallel reality scenario compared to the VR section of the traditional VR scenario, which would be evident from these log data.
 
-\subsubsection{Comparing traditional and parallel reality scenarios}
+\subsubsection{Comparing seated and parallel reality scenarios}
 
 When looking at either scenario's data (the VR section of the seated VR scenario and both RW and VR periods of the parallel reality scenario) it is immediately evident that participants looked to their sides and turned their heads horizontally (yaw) far more than they looked above and beneath themselves by tilting their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} and \ref{6_pitch_yaw_2up.png}, which show pitch and yaw plotted against time for both the seated VR scenario and the parallel reality scenario, for participants 1, 4 and 6 respectively. With the seated VR scenario on the left of each pair of plots and the parallel reality scenario on the right, the displacement of the blue line representing yaw is substantially greater in both than the displacement of the red line representing yaw.
 
@@ -415,7 +415,7 @@ The first stage of investigation directly compared a seated VR scenario in which
 
 Through questionnaire data and interview transcripts participants reported that overall they found the parallel reality scenario to be both more enjoyable and more rewarding than the seated VR scenario, despite the decreased usability and comfort effected by the requirement to don and carry a satchel of hardware and hold devices in both hands. The parallel reality scenario was reported as allowing easier comparison and contrast between RW and VR environments, leading participants to recognise more differences between the two environments and leading to a greater change in and better understanding of the chapel than with the seated VR scenario. The visual acuity afforded by the cameras and both the accuracy and lag of the IPS surfaced as the major detractors to the experience of the parallel reality scenario.
 
-Log data show participants displaying restricted head movement throughout the parallel reality scenario, looking to their sides and above and beneath themselves less when experiencing the VR chapel in the parallel reality scenario than when experiencing the VR chapel in the seated VR scenario. While this restriction does not appear to have been so great that it reduced the utility and enjoyability of the parallel reality scenario to beneath that of the traditional VR scenario, it has been observed by prior investigations~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment and the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a parallel reality system has upon a user's willingness to freely look around them will likely result in beneficial returns, especially when considering that restricted head movement may lead to overlooking interesting aspects of \textit{the both} parallel environments.
+Log data show participants displaying restricted head movement throughout the parallel reality scenario, looking to their sides and above and beneath themselves less when experiencing the VR chapel in the parallel reality scenario than when experiencing the VR chapel in the seated VR scenario. While this restriction does not appear to have been so great that it reduced the utility and enjoyability of the parallel reality scenario to beneath that of the seated VR scenario, it has been observed by prior investigations~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment and the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a parallel reality system has upon a user's willingness to freely look around them will likely result in beneficial returns, especially when considering that restricted head movement may lead to overlooking interesting aspects of \textit{the both} parallel environments.
 
 %=========================================================================================================
 %=========================================================================================================
@@ -583,7 +583,7 @@ Log data were recorded during all scenarios, however these data were not recorde
 
 \subsubsection{Considering all scenarios (seated VR and both parallel reality scenarios)}
 
-For all participants there was once again substantially more yaw change than pitch change, in both seated VR and parallel reality scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows an example of this relationship by plotting pitch and yaw against time for participant 8 for all three scenarios (traditional at left, scenario 1-3 in the middle and scenario 1-4 at right) and the standard deviations for pitch and yaw for all participants across all three scenarios is given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} and \ref{2-1-sd-1-4}.
+For all participants there was once again substantially more yaw change than pitch change, in both seated VR and parallel reality scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows an example of this relationship by plotting pitch and yaw against time for participant 8 for all three scenarios (seated at left, scenario 1-3 in the middle and scenario 1-4 at right) and the standard deviations for pitch and yaw for all participants across all three scenarios is given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} and \ref{2-1-sd-1-4}.
 
 \begin{figure}[h]
 	\begin{center}
@@ -827,7 +827,7 @@ Participant 7 showed this behaviour in a less extreme fashion, spending more tim
 	\end{center}
 \end{figure}
 
-Some participants however continued to use all available transition styles throughout a session, such as participant 13 during scenario 1-3 (figure \ref{13-pitch-yaw-1-3.png}). This was one of the longest individual sessions, with the participant exploring the RW and VR chapels in tandem in parallel reality via the Mirrorshades platform for over 8.5 minutes. During the interview, s/he reported preferring transition 3 via the right trigger \texttt{[RT]} which is corroborated by the data - s/he triggered this transition more than transition 1 or 2 (25 times total, compared to 20 for transition 1 and 14 for transition 2) and spent longer perceiving VR via transition 3 (103 seconds total compared to 81.5 seconds for transition 1 and 20 seconds for transition 2, with a mean of 4.12 seconds for each period using transition 3, 4.075 seconds for transition 1 and 1.429 seconds for transition 2).
+Other participants continued to use all available transition styles throughout a session, such as participant 13 during scenario 1-3 (figure \ref{13-pitch-yaw-1-3.png}). This was one of the longest individual sessions, with the participant exploring the RW and VR chapels in tandem in parallel reality via the Mirrorshades platform for over 8.5 minutes. During the interview, s/he reported preferring transition 3 via the right trigger \texttt{[RT]} which is corroborated by the data - s/he triggered this transition more than transition 1 or 2 (25 times total, compared to 20 for transition 1 and 14 for transition 2) and spent longer perceiving VR via transition 3 (103 seconds total compared to 81.5 seconds for transition 1 and 20 seconds for transition 2, with a mean of 4.12 seconds for each period using transition 3, 4.075 seconds for transition 1 and 1.429 seconds for transition 2).
 
 \begin{figure}[h]
 	\begin{center}
@@ -841,7 +841,7 @@ Some participants however continued to use all available transition styles throu
 
 \subsubsection{Walking and Head Movement}
 
-As seen in the results to the stage 1 evaluation, there is also a correlation in the stage 2.1 results between position and change in head movement, with several participants displaying greater variance in head pitch and yaw while standing still than when walking with the DK1. This is true for both parallel reality scenarios; figure \ref{8-1-3_2up.png} shows pitch and yaw against time above, aligned with distance moved against time below, for participant 8 performing scenario 1-3, while figure \ref{9-1-4_2up.png} shows the same arrangement for participant 9 performing scenario 1-4. Especially after taking into consideration the slight lag in IPS data, the stationary periods starting around 120, 160, 200 and 240 seconds in figure \ref{8-1-3_2up.png} and those starting around 70, 150 and 210 seconds in figure \ref{9-1-4_2up.png} all closely coincide with pronounced variance in yaw.
+As first seen in the results to the stage 1 evaluation, there is a correlation in the stage 2.1 results between position and change in head movement, with several participants displaying greater variance in head pitch and yaw while standing still than when walking with the DK1. This is true for both parallel reality scenarios; as an example figure \ref{8-1-3_2up.png} shows pitch and yaw against time above, aligned with distance moved against time below, for participant 8 performing scenario 1-3, while figure \ref{9-1-4_2up.png} shows the same arrangement for participant 9 performing scenario 1-4. Especially after taking into consideration the slight lag in IPS data, the stationary periods starting around 120, 160, 200 and 240 seconds in figure \ref{8-1-3_2up.png} and those starting around 70, 150 and 210 seconds in figure \ref{9-1-4_2up.png} all closely coincide with pronounced variance in yaw.
 
 \begin{figure}[h]
 	\begin{center}
@@ -863,7 +863,7 @@ As seen in the results to the stage 1 evaluation, there is also a correlation in
 
 \subsubsection{Use of Intermediary Opacities}
 
-Confirming responses during the post task interviews, several participants did make use of the analogue selectable transition (transition 3, accessed via the right trigger \texttt{[RT]}) to view both RW and VR environments together. Figures \ref{10-1-4_opacity.png} and \ref{12-1-4_opacity.png} show, for participants 10 and 12 respectively undertaking scenario 1-4, the opacity of the objects upon which the camera feeds were rendered: an opacity of 1.0 means that the camera feed was completely opaque and the participant was thus perceiving 100\% RW visual stimuli, while an opacity of 0 means that the camera feed was invisible and the participant was perceiving 100\% VR visual stimuli. As well as using the analogue selectable transition to view both environments at once, there are incidents where it seems that the participant used the analogue selectable opacity not strictly to view both environments at once, but to control the speed at which a transition from RW to VR was performed. We can see that participant 10 (figure \ref{10-1-4_opacity.png}) uses transition 3 at around 250 seconds to perform a transition to a 100\% VR view, but at a slower rate than the linear interpolated transition such as can be seen just before at around 245 seconds. This greater level of control in how quickly transitions were performed was raised in interviews as a reason why this particular transition was favoured by some participants.
+Confirming responses during the post task interviews, several participants made use of the analogue selectable transition (transition 3, accessed via the right trigger \texttt{[RT]}) to view both RW and VR environments together. Figures \ref{10-1-4_opacity.png} and \ref{12-1-4_opacity.png} show, for participants 10 and 12 respectively undertaking scenario 1-4, the opacity of the objects upon which the camera feeds were rendered: an opacity of 1.0 means that the camera feed was completely opaque and the participant was thus perceiving 100\% RW visual stimuli, while an opacity of 0 means that the camera feed was invisible and the participant was perceiving 100\% VR visual stimuli. As well as using the analogue selectable transition to view both environments at once, there are incidents where it seems that the participant used the analogue selectable opacity not strictly to view both environments at once, but to control the speed at which a transition from RW to VR was performed. We can see that participant 10 (figure \ref{10-1-4_opacity.png}) uses transition 3 at around 250 seconds to perform a transition to a 100\% VR view, but at a slower rate than the linear interpolated transition such as can be seen taking place just before at around 245 seconds. This greater level of control in how quickly transitions were performed was raised in interviews as a reason why this particular transition was favoured by some participants.
 
 \begin{figure}[h]
 	\begin{center}
@@ -904,13 +904,13 @@ Confirming responses during the post task interviews, several participants did m
 
 \subsection{IPQ}
 
-IPQ results were scaled from the -3 to +3 range used by the questionnaires to the 0 to 6 range used to express results herein. The reversed items (SP2, INV3 and REAL1) had their results appropriately reversed. Tables \ref{sp-2-1-table}, \ref{inv-2-1-table} and \ref{real-2-1-table} show the mean and standard deviation for SP, INV and REAL respectively for the all of the scenarios (traditional VR scenario, scenario 1-3 and scenario 1-4).
+IPQ results were scaled from the -3 to +3 range used by the questionnaires to the 0 to 6 range used to express results herein. The reversed items (SP2, INV3 and REAL1) had their results appropriately reversed. Tables \ref{sp-2-1-table}, \ref{inv-2-1-table} and \ref{real-2-1-table} show the mean and standard deviation for SP, INV and REAL respectively for the all of the scenarios (seated VR scenario, scenario 1-3 and scenario 1-4).
 
-The traditional VR scenario produced baseline IPQ results for a traditional HMD based VR experience in which RW stimuli are suppressed from the user. SP and INV results for this traditional VR scenario were relatively high, while the REAL results were low; this is not surprising, as the graphical quality of the VR chapel reconstruction used throughout the Mirrorshades evaluation was not stellar, partly as a result of having to intentionally reduce the level of detail in order to maintain acceptable framerates throughout the evaluations, thus it should come as no surprise that even though participants perceived bodily actions to be possible within the VR environment (high SP) and found incompatible RW stimuli well suppressed (high INV) that the realness of the VR environment was nonetheless lacking (low REAL). As one participant said during their interview, it felt real even though it didn't look it - \textit{``\ldots obviously it wasn't the same quality, but I still felt so immersed in it. Even though part of me would've known it wasn't real, most of it felt real even though it didn't look like it''}.
+The seated VR scenario produced baseline IPQ results for a seated, full immersion HMD based VR experience in which RW stimuli are suppressed from the user. SP and INV results for the seated VR scenario were relatively high, while the REAL results were low; this does not come as much surprise, as the graphical quality of the VR chapel reconstruction used throughout the user studies was not stellar, partly as a result of having to intentionally reduce the level of detail in order to maintain acceptable framerates throughout the evaluations. It should come as no surprise that even though participants perceived bodily actions to be possible within the VR environment (high SP) and found incompatible RW stimuli well suppressed (high INV) that the realness of the VR environment was nonetheless lacking (low REAL). As one participant said during their interview, it felt real even though it didn't look it - \textit{``\ldots obviously it wasn't the same quality, but I still felt so immersed in it. Even though part of me would've known it wasn't real, most of it felt real even though it didn't look like it''}.
 
-In both parallel reality scenarios SP and REAL were reduced equally by a small amount, whilst INV was reduced more substantially and with greater reduction for scenario 1-4 than for scenario 1-3. This meets the hypothesis that a positive parallel reality experience would result in noticeably reduced INV but without substantial reduction in SP and REAL. The reduced INV indicates that participants were more aware of RW stimuli, but the only marginally reduced SP indicates that their sense of presence in the VR environment did not drastically suffer and the only marginally reduced REAL indicates that the perceived realness of the VR environment did not substantially suffer from tandem observation with the equivalent vantage points into the (necessarily real) RW environment, although the parallel reality effect was evidently not positive enough to elicit heightened overall SP results as was hypothesized might happen from a stellar parallel reality experience.
+In both parallel reality scenarios SP and REAL were reduced equally by a small amount, whilst INV was reduced more substantially and with greater reduction for scenario 1-4 than for scenario 1-3. This meets the hypothesis that a positively received parallel reality experience would result in noticeably reduced INV but without substantial reduction in SP and REAL. The reduced INV indicates that participants were more aware of RW stimuli, but the only marginally reduced SP indicates that their sense of presence in the VR environment did not drastically suffer because of this and the only marginally reduced REAL indicates that the perceived realness of the VR environment did not substantially suffer from tandem observation with the equivalent vantage points into the (necessarily real) RW environment. However the parallel reality effect was evidently not positive enough to elicit heightened overall SP results as was hypothesized might happen from a stellar parallel reality experience.
 
-Looking specifically at the results for SP3 and INV2 (table \ref{sp3-inv2-2-1-table}), they seem to be tied together as per Constantin's observation (see section \ref{igroup-presence-questionnaire-explanation}) for the traditional VR scenario and scenario 1-3 where they fall equally. However in scenario 1-4, INV2 drops substantially more than SP3 which climbs to above its level in scenario 1-3. This lends support to the notion that in a parallel reality experience in which the user is encouraged (or forced, in the case of scenario 1-4 which featured transition 4) to view visual stimuli from two compatible environments that SP can be maintained, that the break in presence associated with a transition from one environment to the other is not so great as to effect a Gestalt switch and throw off perceptual/concrete processing to an extent that sense of presence (in terms of focus of atttention) is drastically reduced.
+Looking specifically at the results for SP3 and INV2 (table \ref{sp3-inv2-2-1-table}), they seem to be tied together as per Constantin's observation (see section \ref{igroup-presence-questionnaire-explanation}) for the seated VR scenario and scenario 1-3 where they fall equally. However in scenario 1-4, INV2 drops substantially more than SP3 which climbs to above its level in scenario 1-3. This lends support to the notion that in a parallel reality experience in which the user is encouraged (or forced, in the case of scenario 1-4 with the automatic switches) to view visual stimuli from two compatible environments that SP can be maintained, that the break in presence associated with a transition from one environment to the other is not so great as to effect a Gestalt switch and throw off perceptual/concrete processing to an extent that sense of presence (in terms of focus of atttention) is drastically reduced.
 
 \begin{table}
 \begin{center}
@@ -923,7 +923,7 @@ Looking specifically at the results for SP3 and INV2 (table \ref{sp3-inv2-2-1-ta
 
 \midrule
 
-traditional & 4.6 & 0.780 \\
+seated & 4.6 & 0.780 \\
 
 1-3 & 4.133 & 1.093 \\
 
@@ -949,7 +949,7 @@ traditional & 4.6 & 0.780 \\
 
 \midrule
 
-traditional & 4.166 & 1.393 \\
+seated & 4.166 & 1.393 \\
 
 1-3 & 2.666 & 1.125 \\
 
@@ -973,7 +973,7 @@ traditional & 4.166 & 1.393 \\
 
 \midrule
 
-traditional & 2.208 & 1.134 \\
+seated & 2.208 & 1.134 \\
 
 1-3 & 1.917 & 1.339 \\
 
@@ -1003,7 +1003,7 @@ traditional & 2.208 & 1.134 \\
  
 \midrule
 
-traditional & 4.5 & 1.472 & 4 & 1.673 \\
+seated & 4.5 & 1.472 & 4 & 1.673 \\
 
 1-3 & 2.5 & 2.160 & 2.8 & 1.643 \\
 
@@ -1022,17 +1022,17 @@ traditional & 4.5 & 1.472 & 4 & 1.673 \\
 
 \subsection{Stage 2.1 Summary}
 
-This stage of the evaluation has provided first insight into best practices for implementing future parallel reality experiences. The ability to manually control the balance of RW/VR visuals has emerged as preferable to more basic transitions that simply alternate between the extremes of 100\% RW and 100\% VR, while adding uncontrolled VR visuals to the default view led to a negative effect upon enjoyment and comfort but a positive effect upon observation and understanding of the relationship between the two constituent environments.
+This part of the investigation has provided a first insight into best practices for implementing future parallel reality experiences, by investigating preferences and reactions toward different implementations of the first of the two fundamental aspects of performing transitions between RW and VR visual stimuli - the process by which the visual stimuli of one environment are replaced by those of the other environment. The ability to manually control the balance of RW/VR visuals emerged as preferable to more basic transitions that simply alternate between the default view and the VR view, while adding uncontrolable moments of VR visuals to the default view led to a negative effect upon enjoyment and comfort but a positive effect upon observation and understanding of the relationship between the two constituent environments.
 
 Participants overwhelmingly preferred transition 3 compared to the others, which was somewhat surprising as initial experiments with the Mirrorshades platform with members of the OVW research group strongly indicated preference toward transition 2. With the larger number of participants in this stage of evaluation and the relatively unscientific nature of the tests within the OVW group, this preference toward transition 3 should be considered legitimate even though unexpected. Reasoning for preference toward transition 3 included being able to see both environments at once and a heightened sense of control.
 
-Transition 4 was unanimously negatively received in terms of overall comfort and enjoyment of the scenarios, however participants did comment on heightened awareness and understanding between the two environments when transition 4 was present. Comments from participants concerning transition 4 such as that each time it occurred they would need to \textit{``stop and work it out again''} directly supports the notion that transition 4 results in a larger break in presence, in terms of movement on the focus of attention axis from presence toward absence, than the the other transition styles, with `working it out' alluding to the notion of conceptual/abstract reasoning that sits opposite perceptual/concrete processing at the two ends of the balance of focus of attention.
+Transition 4 was unanimously negatively received in terms of overall comfort and enjoyment of the scenarios, however participants did comment on heightened awareness and understanding between the two environments when transition 4 was present. Comments from participants concerning transition 4 such as that each time it occurred they would need to \textit{``stop and work it out again''} directly supports the notion that transition 4 would result in a worse break in presence, a large deflection upon the focus of attention axis from presence toward absence, than the the other transition styles, with `working it out' alluding to the notion of conceptual/abstract reasoning that sits opposite perceptual/concrete processing at the two ends of the focus of attention axis.
 
-One relationship that did not arise as expected was a preference toward different transition styles in different situations, such as using transition 1 when performing a quick check on the VR environment and transition 3 when performing a more in-depth comparison. Instead it seems that most participants `experimented' with the transition styles available to them and settled upon a favourite, then used that one style throughout the rest of the scenario. Either the difference in utility between the different transition styles was not great enough to prompt participants to consider using different styles in different situations, or comfort trumped utility and participants continued to use the transition style they found most comfortable even if they thought that another might have served them better for a specific set of circumstances.
+One relationship that did not arise as expected was a preference toward different transition styles in different situations, such as using transition 1 when performing a quick check on the VR environment and transition 3 when performing a more in-depth comparison. Instead it seems that most participants tried out the transition styles available to them and settled upon a favourite, then used that one style throughout the rest of the scenario. Either the difference in utility between the different transition styles was not great enough to prompt participants to consider using different styles in different situations, or comfort trumped utility and participants continued to use the transition style they found most comfortable even if they thought that another might have served them better for a specific situation or set of circumstances.
 
 The same relationships with head movement as seen in stage 1 returned for stage 2.1, with substantially more variance in yaw than pitch across all scenarios, more variance in head movement when perceiving VR than RW during the parallel reality scenarios and more variance in head movement while standing stationary than when walking during the parallel reality scenarios.
 
-IPQ results met hypotheses, with the traditional VR scenario scoring highly in both SP and INV while scoring lowly in REAL (explained by the low visual quality of the VR model) and the parallel reality scenarios only marginally reducing SP and REAL while more substantially reducing INV. Of particular interest is that scenario 1-4 displayed a substantial gap between SP3 and INV2, whereas with scenario 1-3 these values were reduced more evenly from the traditional VR scenario baseline. These IPQ results indicate that the parallel reality scenarios undertaken by stage 2.1 participants succeed in allowing participants to experience the RW environment in tandem with the VR environment, without having a substantial negative effect upon their sense of presence in the VR environment or upon the perceived realism of the VR environment.
+IPQ results met hypotheses, with the seated VR scenario scoring highly in both SP and INV while scoring lowly in REAL (explained by the low visual quality of the VR model) and the parallel reality scenarios only marginally reducing SP and REAL while more substantially reducing INV. Of particular interest is that scenario 1-4 displayed a substantial gap between SP3 and INV2, whereas in scenario 1-3 these values were reduced more evenly from the seated VR scenario baseline. These IPQ results indicate that the parallel reality scenarios undertaken by stage 2.1 participants succeed in allowing participants to experience the RW environment in tandem with the VR environment, without having a substantial negative effect upon their sense of presence in the VR environment or upon the perceived realism of the VR environment.
 
 %=========================================================================================================
 
